<resources>
    <string name="app_name">CleanAir Spaces</string>
    <string name="tool_bar_logo_desc">logo</string>
    <string name="map_menu_help_txt">Help</string>
    <string name="map_menu_about_app_txt">About App</string>
    <string name="app_logo_image_desc">app logo</string>
    <string name="about_app_txt">CleanAir Spaces 2021</string>
    <string name="app_version_desc">Version 1.0</string>
    <string name="got_it">Got it!</string>
    <string name="dismiss">Dismiss</string>
    <string name="locations_txt">Locations</string>
    <string name="smart_qr_txt">SMART QR</string>
    <string name="map_view_txt">Map View</string>
    <string name="add_txt">Add</string>
    <string name="location_logo_image_desc">Location logo image</string>
    <string name="indoor_txt">indoor</string>
    <string name="outdoor_txt">outdoor</string>
    <string name="air_status_indicator_desc">air status indicator</string>
    <string name="good_air_status_txt">Good</string>
    <string name="moderate_air_status_txt">Moderate</string>
    <string name="click_to_view_info_txt">Click to view info</string>
    <string name="location_permission_rationale">Permissions required to display your location on the map</string>
    <string name="turn_on_gps_prompt">Please enable GPS to access your location</string>
    <string name="map_menu_help_desc_txt">Use Smart Qr to scan your device\'s QR Code and keep track of your location Or simply click Add to search for your location name.\nYou can hide/show the added locations on top of the map by clicking Map View</string>
    <string name="danger_txt">Bad</string>
    <string name="condition_good">Good</string>
    <string name="pm2_5_lvl_comment">PM2.5 Level</string>
    <string name="condition_beyond_rating">Beyond Rating</string>
    <string name="pm2_5_lvl_aqi_us_comment">PM2.5 Level AQI US</string>
    <string name="condition_moderate">Moderate</string>
    <string name="condition_unhealthy_sensitive_groups">Unhealthy F. S. G.</string>
    <string name="condition_unhealthy_sensitive_groups_comment">PM2.5 Level AQI US Unhealthy for sensitive groups</string>
    <string name="condition_unhealthy">Unhealthy</string>
    <string name="condition_very_unhealthy">Very Unhealthy</string>
    <string name="condition_hazardous">Hazardous</string>
    <string name="pm2_5_lvl_aqi_cn_comment">PM2.5 Level AQI CN</string>
    <string name="condition_excellent">Excellent</string>
    <string name="condition_lightly">Lightly</string>
    <string name="condition_heavy">Heavy</string>
    <string name="condition_severe">Severe</string>
    <string name="condition_undetermined">Undetermined</string>
    <string name="voc_lvl_comment">VOC Level</string>
    <string name="good_voc_lvl_comment">Good VOC Level</string>
    <string name="moderate_voc_lvl_comment">Moderate VOC Level</string>
    <string name="unhealthy_voc_lvl_comment">Unhealthy VOC Level</string>
    <string name="co_2_lvl_comment">CO2 Level</string>
    <string name="scan_qr_code_prompt">Scan a barcode or QR Code</string>
    <string name="scan_qr_code_cancelled">Scanning qr code cancelled</string>
    <string name="scanned_qr_content_image_desc">Location Logo</string>
    <string name="site_credentials_txt">Site Credentials</string>
    <string name="user_name_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="add_location_text">Add Location</string>
    <string name="cancel_text">Cancel</string>
    <string name="processing_qr_code">Processing…</string>
    <string name="scan_qr_code_unknown">The QR Code you scanned is not a valid CAS QR Code.</string>
    <string name="parsing_device_qr_failed">Could not parse that device\'s qr code.\nPlease try again later.</string>
    <string name="parsing_monitor_qr_failed">Could not parse that monitor\'s qr code.\nPlease try again later.</string>
    <string name="company_name_lbl">Company</string>
    <string name="location_lbl">Location</string>
    <string name="device_id_lbl">ID</string>
    <string name="ref_mon_lbl">Name</string>
    <string name="location_information">Location Information</string>
    <string name="location_added_text">Location Added</string>
    <string name="enter_username_password"><![CDATA[Please enter the username & password]]></string>
    <string name="device_type_one">CMD - ductFIT Ceiling</string>
    <string name="device_type_three">EP550</string>
    <string name="device_type_four">CMD - ductFIT Ceiling</string>
    <string name="device_type_five">KleanSense Air Quality Monitor</string>
    <string name="device_type_six">Fresh Air Unit</string>
    <string name="device_type_eight">CMD - Fresh Air</string>
    <string name="device_type_nine">ductFIT</string>
    <string name="device_type_ten">Fresh Air Unit</string>
    <string name="device_type_eleven">ductFIT Cloud</string>
    <string name="device_type_twelve">ductFIT Wall</string>
    <string name="device_info_lbl">Device Information</string>
    <string name="my_location_btn_desc">View My Location</string>
    <string name="remove_location_text">Remove Location</string>
    <string name="failed_to_add_location_check_credentials">Adding location failed. Check your credentials</string>
    <string name="updated_on_prefix">Updated On</string>
    <string name="map_menu_settings_txt">Settings</string>
    <string name="air_quality_index_txt">Air Quality Index</string>
    <string name="default_pm_text">PM 2.5 is used by default</string>
    <string name="save_changes_txt">Save Changes</string>
    <string name="indoor_details_txt">indoor details</string>
    <string name="co_lbl">CO2</string>
    <string name="tvoc_lbl">TVOC</string>
    <string name="tmp_lbl">Temperature</string>
    <string name="humidity_lbl">Humidity</string>
    <string name="indoor_energy_title_txt"><![CDATA[Energy Efficiency & Impact]]></string>
    <string name="carbon_saved_lbl">Carbon Saved</string>
    <string name="last_thirty_lbl">Last 30 Days</string>
    <string name="energy_saved_lbl">Energy Saved</string>
    <string name="recommendations_txt">Recommendations</string>
    <string name="mask_image_txt">Mask Image</string>
    <string name="co2_units">ppm</string>
    <string name="tvoc_units">mg/m³</string>
    <string name="tmp_units">&#xb0;C</string>
    <string name="humid_units">%</string>
    <string name="pm_units">µg/m³</string>
    <string name="tonnes_txt">Tn</string>
    <string name="kg_txt">Kg</string>
    <string name="percent">%</string>
    <string name="no_mask">No masks necessary</string>
    <string name="outdoor_acts_suitable">Suitable for outdoor activities</string>
    <string name="windoors_open">Windows can be openned</string>
    <string name="air_purify_not_needed">Turn air purification off</string>
    <string name="masks_recommended">Wear masks while outdoors</string>
    <string name="avoid_outdoors">Avoid outdoor activities</string>
    <string name="close_windows">Keep windows closed</string>
    <string name="air_purify_needed">Air purification should be tured on</string>
    <string name="masks_recommended_sensitive">Masks recommended for sensitive groups</string>
    <string name="minimal_outdoor_acts">Limit outdoor activities</string>
    <string name="air_purify_recommended">Air purification recommended\"</string>
    <string name="a_map_preferred">A Map</string>
    <string name="g_map_preferred">Google Maps</string>
    <string name="map_language">Map Language</string>
    <string name="default_map_language">Chinese</string>
    <string name="details_fragment_lbl">Latest Info</string>
    <string name="history_fragment_lbl">History</string>
    <string name="last_seven_two_hours">Last 72 hours</string>
    <string name="loading_graph_data">Loading data …</string>
    <string name="last_week_lbl">Last week</string>
    <string name="air_quality_txt">Air Quality</string>
    <string name="outdoors_air_quality_txt">Outdoor Air Quality</string>
    <string name="search">Search location or city</string>
    <string name="search_long_hint">Search for an indoor or out door location such as a city</string>
    <string-array name="map_languages">
        <item>Chinese</item>
        <item>English</item>
    </string-array>
</resources>