<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add_locations.AddLocationActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="@dimen/std_icon"
        android:layout_height="@dimen/std_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/md_space" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/location_logo_size"
                android:layout_height="@dimen/location_logo_size"
                android:contentDescription="@string/scanned_qr_content_image_desc"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/device_logo"
                android:layout_width="@dimen/location_logo_size"
                android:layout_height="@dimen/location_logo_size"
                android:contentDescription="@string/scanned_qr_content_image_desc"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info"
                style="@style/Theme.CleanAirSpaces.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_space"
                android:gravity="center"
                android:textSize="@dimen/md_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/site_credentials_lbl"
                style="@style/Theme.CleanAirSpaces.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/site_credentials_txt"
                android:textSize="@dimen/lg_txt"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                style="@style/Theme.CleanAirSpaces.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_space"
                android:visibility="invisible"
                app:hintTextAppearance="@style/Theme.CleanAirSpaces.Caption"
                app:hintTextColor="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/site_credentials_lbl">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.CleanAirSpaces.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_hint"
                    android:inputType="textShortMessage"
                    android:textColorHint="?colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Theme.CleanAirSpaces.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_space"
                android:visibility="invisible"
                app:hintTextAppearance="@style/Theme.CleanAirSpaces.Caption"
                app:hintTextColor="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.CleanAirSpaces.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="?colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_location_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_space"
                android:background="@color/blue_light"
                android:elevation="@dimen/std_space"
                android:paddingStart="@dimen/md_space"
                android:paddingEnd="@dimen/md_space"
                android:text="@string/add_location_text"
                android:textAppearance="@style/Theme.CleanAirSpaces.Button"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/remove_location_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_space"
                android:background="@color/orange"
                android:elevation="@dimen/std_space"
                android:paddingStart="@dimen/md_space"
                android:paddingEnd="@dimen/md_space"
                android:text="@string/remove_location_text"
                android:textAppearance="@style/Theme.CleanAirSpaces.Button"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_location_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_space"
                android:background="@color/whitish"
                android:elevation="@dimen/std_space"
                android:paddingStart="@dimen/md_space"
                android:paddingEnd="@dimen/md_space"
                android:text="@string/cancel_text"
                android:textAppearance="@style/Theme.CleanAirSpaces.Button"
                android:textColor="@color/blue"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remove_location_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
